# Clinical-trials-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: load_mock_csv.py  mock_trials.csv
